[project]
name = "crontinel"
version = "0.1.0"
description = "Crontinel monitoring SDK for Python applications"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Harun R Rayhan" }]
homepage = "https://crontinel.com"
repository = "https://github.com/crontinel/python"

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "httpx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
minversion = "7.0"